[tool.poetry]
name = "my_master"
version = "0.1.0"
description = ""
authors = ["MKhromina <marina.mise.khromina@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
tensorflow = "^2.9.0"
tensorflow-gpu = "^2.9.0"
numpy = "^1.22.4"
scikit-learn = "^1.1.1"
scipy = "^1.8.1"
matplotlib = "^3.5.2"
scikit-image = "^0.19.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
